Добавить реализацию методов TaskManager в качестве API, добавить обработчики для каждого типа эндпоинтов, добавить новые исключения, добавить адаптеры типов Duration и LocatDateTime для перевода в json, добавить класс HttpTaskServer, конфигурирующий и запускающий сервер